i18n/zh/docusaurus-plugin-content-docs/version-1.2/reference/sql/information-schema/overview.md
---
keywords: [系统元数据, INFORMATION_SCHEMA, MySQL 兼容性, 自定义表, 集群信息]
description: INFORMATION_SCHEMA 提供对系统元数据的访问，例如数据库或表的名称、列的数据类型等。
---

# INFORMATION_SCHEMA

`INFORMATION_SCHEMA` 提供数据库和表名、列数据类型等元数据。GreptimeDB 还提供系统、集群和运行时元数据的自定义 `INFORMATION_SCHEMA` 表。

许多 `INFORMATION_SCHEMA` 表有对应的 `SHOW` 命令。与 `SHOW` 不同，`INFORMATION_SCHEMA` 表可以在 SQL 查询中进行过滤、投影和连接。

下表区分了已实现的元数据表、返回零行的兼容表以及不支持的表。

## MySQL 兼容性

|表名 | 描述|
| --- | --- |
| [`CHARACTER_SETS`](./character-sets.md) | 提供了可用字符集的信息。 |
| `CHECK_CONSTRAINTS`| 未实现。返回零行。 |
| [`COLLATIONS`](./collations.md) | 提供了服务器支持的排序规则列表。 |
| [`COLLATION_CHARACTER_SET_APPLICABILITY`](./collation-character-set-applicability.md) | 解释了哪些排序规则适用于哪些字符集。 |
| [`COLUMNS`](./columns.md) | 提供了所有表的列列表。 |
| `COLUMN_PRIVILEGES` | 未实现。返回零行。 |
| `COLUMN_STATISTICS` | 不支持。 |
| [`ENGINES`](./engines.md) | 提供了支持的存储引擎列表。 |
| `EVENTS` | 未实现。返回零行。 |
| `FILES` | 未实现。返回零行。 |
| `GLOBAL_STATUS` | 未实现。返回零行。 |
| `GLOBAL_VARIABLES` | 不支持。 |
| [`KEY_COLUMN_USAGE`](./key-column-usage.md) | 描述了列的关键约束，例如主键和时间索引约束。 |
| `OPTIMIZER_TRACE` | 未实现。返回零行。 |
| `PARAMETERS` | 未实现。返回零行。 |
| [`PARTITIONS`](./partitions.md) | 提供了表分区的列表。 |
| `PLUGINS` | 未实现。返回零行。 |
| `PROCESSLIST` | 未实现。返回零行。 |
| `PROFILING` | 未实现。返回零行。 |
| `REFERENTIAL_CONSTRAINTS` | 未实现。返回零行。 |
| `ROUTINES` | 未实现。返回零行。 |
| [`SCHEMATA`](./schemata.md) | 提供了类似于 `SHOW DATABASES` 的信息。 |
| `SCHEMA_PRIVILEGES` | 未实现。返回零行。 |
| `SESSION_STATUS` | 未实现。返回零行。 |
| `SESSION_VARIABLES` | 不支持。 |
| [`STATISTICS`](./statistics.md) | 以兼容 MySQL 的形式提供索引元数据。 |
| [`TABLES`](./tables.md) | 提供了当前用户可见的表列表。类似于 `SHOW TABLES`。 |
| `TABLESPACES` | 不支持。 |
| `TABLE_PRIVILEGES` | 未实现。返回零行。 |
| `TRIGGERS` | 不支持。GreptimeDB Enterprise 提供一张结构不同的 [`TRIGGERS`](./triggers.md) 表。 |
| `USER_ATTRIBUTES` | 不支持。 |
| `USER_PRIVILEGES` | 未实现。返回零行。 |
| `VARIABLES_INFO` | 不支持。 |
| [`VIEWS`](./views.md)| 提供了当前用户可见的视图（View）列表及相关信息。 |
| [`TABLE_CONSTRAINTS`](./table-constraints.md) | 提供时间索引和主键约束的元数据。 |

## GreptimeDB 提供的表

|表名 | 描述|
| --- | --- |
| [`BUILD_INFO`](./build-info.md) | 提供了系统构建的信息。 |
| [`REGION_PEERS`](./region-peers.md) | 提供了表的 Region 存储的详细信息。 |
| [`REGION_INFO`](./region-info.md) | 提供 Region 的运行时和 manifest 元数据，例如角色和状态、序列号、manifest 版本、Region 选项、SST 格式以及节点归属。 |
| [`REGION_STATISTICS`](./region-statistics.md) | 提供 Region 的详细统计信息，例如行数等。 |
| [`CLUSTER_INFO`](./cluster-info.md)| 提供了集群的节点拓扑信息。|
| [`FLOWS`](./flows.md) | 提供 Flow 相关信息。|
| [`FLOW_STATISTICS`](./flow-statistics.md) | 提供 Flow 的运行统计信息。|
| [`PROCEDURE_INFO`](./procedure-info.md) | 提供 Procedure 相关信息。|
| [`PROCESS_LIST`](./process-list.md) | 提供集群内正在执行的查询信息。 |
| [`RECYCLE_BIN`](./recycle-bin.md) | 提供仍可恢复的 soft-dropped table。 |
| [`TABLE_SEMANTICS`](./table-semantics.md) | 提供表语义层元数据的实验性视图。 |
| [`SSTS_INDEX_META`](./ssts-index-meta.md) | 提供 SST 索引元数据，包括倒排索引、全文索引和布隆过滤器。|
| [`SSTS_MANIFEST`](./ssts-manifest.md) | 提供从 manifest 获取的 SST 文件信息，包括文件路径、大小、时间范围、行数和编码后的主键范围。|
| [`SSTS_STORAGE`](./ssts-storage.md) | 提供从存储层获取的 SST 文件信息，用于验证和调试。|
| [`TRIGGERS`](./triggers.md) | 提供 Trigger 的相关信息。 |
| [`ALERTS`](./alerts.md) | 提供告警的相关信息。 |
